// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PasswordResetRequest > matches snapshot in en 1`] = `
<div
  class="page auth password-reset-request"
>
  <h1>
    Reset your password 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main>
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
      >
        <label
          for="email"
        >
          Your email
        </label>
        
        <input
          class=""
          name="email"
          placeholder="john.doe@example.com"
          tabindex="0"
          type="email"
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <button
          aria-label="Email me"
          class="loading-button"
          data-v-d8daf161=""
        >
          <div
            class="label"
            data-v-d8daf161=""
          >
            <span
              data-v-d8daf161=""
            >
              Email me
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    
  </main>
</div>
`;

exports[`PasswordResetRequest > matches snapshot in fr 1`] = `
<div
  class="page auth password-reset-request"
>
  <h1>
    Réinitialisation de votre mot de passe 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  <main>
    
    
    
    <form
      novalidate=""
    >
      <div
        class="field email"
      >
        <label
          for="email"
        >
          Votre adresse courriel
        </label>
        
        <input
          class=""
          name="email"
          placeholder="john.doe@example.com"
          tabindex="0"
          type="email"
        />
        <!---->
        
      </div>
      <div
        class="actions"
      >
        <button
          aria-label="Réinitialiser"
          class="loading-button"
          data-v-d8daf161=""
        >
          <div
            class="label"
            data-v-d8daf161=""
          >
            <span
              data-v-d8daf161=""
            >
              Réinitialiser
            </span>
          </div>
          <!---->
        </button>
      </div>
    </form>
    
  </main>
</div>
`;
